<resources>
    <string name="app_name">Chrysallis Events</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="telefono">Phone</string>
    <string name="language">Language</string>
    <string name="Spanish">Spanish</string>
    <string name="English">English</string>
    <string name="Galician">Galician</string>
    <string name="Euskera">Euskera</string>
    <string name="Login">Login</string>
    <string name="Catalan">Catalan</string>
    <string name="messageForgotPassword"><u>I forgot the password</u></string>
    <string name="destacados">Featured</string>
    <string name="home">Home</string>
    <string name="title_perfil">Profile</string>
    <string name="title_explorar">Explore</string>
    <string name="title_chat">Chat</string>
    <string name="loginIncorrect">Incorrect Login</string>
    <string name="eventos">My events</string>
    <string name="changePassword">Change password</string>
    <string name="contact">Contact</string>
    <string name="community">Community</string>
    <string name="searchLabel">Search</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="newPassword">New Password</string>
    <string name="newPasswordConfirmation">Password confirmation</string>
    <string name="passwordChanged">Password changed</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="passwordsNotMatch">Passwords do not match</string>
    <string name="changeLanguage">Change Language</string>
    <string name="languageChanced">Language changed</string>
    <string name="restartApp">Restart App</string>
    <string name="languageNotChanced">Language not changed</string>
    <string name="passwordNotChanged">Could not change password</string>
    <string name="PermisoDenegado">Permission denied</string>
    <string name="ChooseGallery">Choose from gallery</string>
    <string name="NoCamera">The device has no camera</string>
    <string name="TakePhoto">Take a photo</string>
    <string name="ChooseProfilePicture">Choose profile picture</string>
    <string name="email">Email address</string>
    <string name="msgNotEvents">There are currently no new events.</string>
    <string name="sendPassword">Send password</string>
    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
        <item>Catalan</item>
        <item>Euskera</item>
        <item>Galician</item>
    </string-array>
    <string name="NewPasword">Your new Crysallis Events password is:\u0020</string>
    <string name="recomendacion">\n\nWe recommend changing this password \n\nDo not reply, this is an automatic email</string>
    <string name="errorEmail">Email was not sent successfully</string>
    <string name="event">Event</string>
    <string name="join">Join</string>
    <string name="notActive">Partner not active</string>
    <string name="numAttendants">Number of attendants</string>
    <string name="notNumber">Not valid number introduced</string>
    <string name="attendanceConfirmation">Attendance Confirmation</string>
    <string name="attendanceConfirmed">Attendance confirmed</string>
    <string name="apuntado">You have signed up for the event</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="noResponder">\n\nDo not reply, this is an automatic email</string>
    <string name="joined">Joined</string>
    <string name="fechaLimite">It is not possible to participate. Registration deadline reached.</string>
    <string name="wrongDate">Wrong date,  you need to select a date that is current or higher</string>
    <string name="documents">Documents</string>
    <string name="notAttendanceConfirmation">Unsubscribe confirmation</string>
    <string name="notAttendance">Are you sure you want to unsubscribe?</string>
    <string name="notAttendanceConfirmed">Unsubscribe  confirmed</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="comment">Comment</string>
    <string name="noStars">No selected stars</string>
    <string name="ratingSaved">Saved rating</string>
    <string name="rate">Rate</string>
    <string name="PermisoConcedido">Permiso concedido</string>
    <string name="ImageChanged">Image has been changed</string>
    <string name="ImageCannot2mb">Image cannot exceed 2 MB</string>
    <string name="ImageNotChanged">Image has not been changed</string>
    <string name="communityNotChanged">Community has not been changed</string>
    <string name="communityChanged">Community has been changed</string>
    <string name="logout">Logout</string>
    <string name="deleteConfirmation">Delete message</string>
    <string name="messageDelete">The message will be permanently deleted</string>
    <string name="messageDeleted">The message has been deleted</string>
    <string name="messageNotDeleted">The message could not be deleted</string>
    <string name="writeAMessage">Write a message...</string>
    <string name="msgNoDocuments">There are no documents for this event</string>
    <string name="traducido">(Translated) See original text</string>
    <string name="noTraducido">(Original) See translated text</string>
    <string name="security">The password must be lowercase, uppercase, special character(@$!%*?&amp;.) and have a minimum length of 8 characters.</string>
    <string name="notSpots">There are not enough spots available. Available:</string>
    <string name="notAttendanceConfirmationEmail">If you want to unsubscribe from this event, click on the following link:</string>
</resources>
