<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/azulBandera"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="5">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                app:boxStrokeColor="@color/blanco"
                app:hintTextColor="@color/blanco"
                android:textColorHint="@color/blanco"
                app:boxStrokeWidth="2dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                android:padding="2dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:maxLines="1"
                    android:inputType="phone"
                    android:textSize="@dimen/medio"
                    android:textAlignment="center"
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nextFocusDown="@id/editTextPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:boxStrokeColor="@color/blanco"
                app:hintTextColor="@color/blanco"
                android:textColorHint="@color/blanco"
                app:boxStrokeWidth="2dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                android:padding="2dp">
                <com.google.android.material.textfield.TextInputEditText

                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:textSize="@dimen/medio"
                    android:textAlignment="center"
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nextFocusDown="@id/buttonLogin"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/recuperarClave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messageForgotPassword"
            android:textSize="@dimen/medio"/>
        <Button
            android:id="@+id/buttonLogin"
            android:layout_margin="@dimen/marginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textColor="@color/blanco"
            android:textSize="@dimen/medio"
            android:backgroundTint="@color/colorPrimaryDark"/>

    </LinearLayout>


</LinearLayout>