<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/azulBandera"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            app:boxStrokeColor="@color/blanco"
            app:hintTextColor="@color/blanco"
            android:textColorHint="@color/blanco"
            app:boxStrokeWidth="2dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            android:padding="2dp">
            <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:inputType="phone"
                android:textSize="@dimen/medio"
                android:textAlignment="center"
                android:id="@+id/editTextPhoneRecuperar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxStrokeColor="@color/blanco"
            app:hintTextColor="@color/blanco"
            android:textColorHint="@color/blanco"
            app:boxStrokeWidth="2dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            android:padding="2dp">
            <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/medio"
                android:textAlignment="center"
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/buttonRecuperar"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonRecuperar"
        android:layout_margin="@dimen/marginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendPassword"
        android:textColor="@color/blanco"
        android:textSize="@dimen/medio"/>

</LinearLayout>