<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_margin="@dimen/medio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/grande"
            android:textColor="@color/colorPrimary"
            android:id="@+id/nombrePerfil"/>


        <com.example.chrysallis.components.ImageButtonRounded
            android:layout_width="@dimen/imagenPerfil"
            android:layout_height="@dimen/imagenPerfil"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:id="@+id/ImgPerfil"
            android:background="@null"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/borde">
            <TextView
                android:layout_marginLeft="@dimen/icono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medio"
                android:text="Comunidad"
                android:textColor="@color/colorAccent"
                android:id="@+id/ubicacionPerfil"/>
            <ImageButton
                android:id="@+id/buttonEditComunidad"
                android:layout_width="@dimen/icono"
                android:layout_height="@dimen/icono"
                android:src="@drawable/edit"
                android:layout_gravity="center"
                android:background="@drawable/edit"
                android:scaleType="centerCrop"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medio"
            android:text="@string/eventos"
            android:textColor="@color/colorAccent"
            android:id="@+id/eventosPerfil"
            android:padding="@dimen/borde"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/borde">
            <TextView
                android:layout_marginLeft="@dimen/icono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medio"
                android:text="@string/changePassword"
                android:textColor="@color/colorAccent"
                android:id="@+id/passwordPerfil"/>
            <ImageButton
                android:id="@+id/buttonEditPassword"
                android:layout_width="@dimen/icono"
                android:layout_height="@dimen/icono"
                android:src="@drawable/edit"
                android:layout_gravity="center"
                android:background="@drawable/edit"
                android:scaleType="centerCrop"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/borde">
            <TextView
                android:layout_marginLeft="@dimen/icono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medio"
                android:text="Idioma"
                android:textColor="@color/colorAccent"
                android:id="@+id/languagePerfil"/>

            <ImageButton
                android:id="@+id/buttonEditLanguage"
                android:layout_width="@dimen/icono"
                android:layout_height="@dimen/icono"
                android:src="@drawable/edit"
                android:layout_gravity="center"
                android:background="@drawable/edit"
                android:scaleType="centerCrop"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medio"
            android:text="@string/contact"
            android:textColor="@color/colorAccent"
            android:id="@+id/contactarPerfil"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/iconoMensaje">
            <TextView
                android:id="@+id/txtLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medio"
                android:text="@string/logout"
                android:textColor="@color/colorPrimaryDark"/>
            <ImageButton
                android:id="@+id/powerOff"
                android:layout_width="@dimen/iconoMensaje"
                android:layout_height="@dimen/iconoMensaje"
                android:src="@drawable/power_off"

                android:scaleType="centerCrop"
                android:background="@android:color/transparent"/>
        </LinearLayout>

    </LinearLayout>



</ScrollView>