<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FragmentHome"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/borde_fragments">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventoTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/colorPrimaryDark"
            android:hint="@string/searchLabel"
            app:startIconContentDescription="@string/searchLabel"
            app:startIconDrawable="@drawable/search_icon"
            app:helperTextEnabled="true"
            app:boxStrokeWidth="2dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNameEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/spnComunity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical">
            </Spinner>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dateTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    android:hint="@string/date"
                    app:helperTextEnabled="true"
                    app:startIconContentDescription="@string/date"
                    app:startIconDrawable="@drawable/date"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextFecha"
                        android:editable="false" />
                </com.google.android.material.textfield.TextInputLayout>
            </FrameLayout>
        </LinearLayout>
        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/searchLabel"
            android:textColor="@color/blanco"
            android:textSize="@dimen/medio" />
    </LinearLayout>
    <TextView
        android:id="@+id/msgNotEventsExplore"
        android:layout_margin="@dimen/medio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/msgNotEvents"
        android:text="@string/msgNotEvents"
        android:gravity="start"
        android:textColor="@color/gris"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/recyclerEventosSearch"/>
</LinearLayout>