<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventoActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/txtEvent"
                android:textStyle="bold"
                android:textSize="@dimen/txtNameEvent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/mrgEvent">


            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/imgEvent"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/mrgEvent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtComunEvent"
                    android:textSize="@dimen/txtComEvent"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/date_event"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtDateEvent"
                        android:textSize="@dimen/txtEvent"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/limit_date"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtLimitDateEvent"
                        android:textSize="@dimen/txtEvent"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/time"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtTimeEvent"
                        android:textSize="@dimen/txtEvent"/>
                </LinearLayout>
                <Button
                    android:id="@+id/buttonJoin"
                    android:layout_marginHorizontal="@dimen/marginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/btnJoin"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDesEvent"
            android:textSize="@dimen/medio"
            android:layout_margin="@dimen/mrgEvent"/>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTraducido"
            android:text="@string/traducido"
            android:textSize="@dimen/small"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginHorizontal="@dimen/mrgEvent"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/location"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtLocationEvent"
                android:textSize="@dimen/txtEvent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/negro"
            android:layout_margin="@dimen/borde_fragments">
            <fragment
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300sp"
                map:cameraZoom="16"
                map:uiCompass="false"
                map:uiRotateGestures="true"
                map:uiScrollGestures="false"
                map:uiTiltGestures="true"
                map:uiZoomControls="true"
                map:uiZoomGestures="true"
                tools:context=".EventosActivity"
                android:layout_margin="@dimen/borde_fragments"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/documents"
            android:textSize="@dimen/txtComEvent"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="@dimen/mrgEvent"/>

        <TextView
            android:id="@+id/msgNoDocuments"
            android:layout_margin="@dimen/small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/msgNotEvents"
            android:text="@string/msgNoDocuments"
            android:layout_marginStart="@dimen/mrgEvent"
            android:textColor="@color/gris"/>

        <com.example.chrysallis.components.WrapGrid
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="1"
            android:id="@+id/gridDocs"
            android:layout_marginStart="@dimen/mrgEvent"/>

    </LinearLayout>
</ScrollView>